--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>raytracer.ts</title>
 </head>
 <body>
+  <canvas id="canvas" width="640" height="480"></canvas>
   <script src="./src/index.ts"></script>
 </body>
 </html>
